welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: type mismatch;
 found   : Any
 required: Int
    T(compteur) = getCouleurSol()
      ^Array1:18: error: type mismatch;
 found   : Any
 required: java.awt.Color
      Brosse(T(k))
              ^